<resources>
    <string name="app_name">Marry Me</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_update_profile">UpdateProfile</string>
    <string-array name="religion">
        <item>Select Religion</item>
        <item>Hinduism</item>
        <item>Islam</item>
        <item>Christianity</item>
        <item>Sikhism</item>
        <item>Buddhism</item>
        <item>Jainism</item>
    </string-array>
    <string name="username">Username :</string>
    <string name="email">Email :</string>
    <string name="phonenumber">Phone :</string>
    <string name="password">Password :</string>
    <string name="caste">Caste :</string>
    <string-array name="occupation">
        <item>Select Occupation</item>
        <item>Airforce</item>
        <item>Army</item>
        <item>Navy</item>
        <item>Lecture</item>
        <item>Professor</item>
        <item>Teacher</item>
        <item>Doctor</item>
    </string-array>
    <string-array name="education">
        <item>Select Education</item>
        <item>Bachelors</item>
        <item>Masters</item>
        <item>Doctorate</item>
        <item>Diploma</item>
        <item>Ungraduated</item>
        <item>Associate degree</item>
        <item>Honours degree</item>
        <item>Trade school</item>
        <item>High school</item>
        <item>Less than high school</item>
    </string-array>
    <string-array name="mothertongue">
        <item>Select Mothertongue</item>
        <item>Hindi</item>
        <item>Bengali</item>
        <item>Telugu</item>
        <item>Marathi</item>
        <item>Tamil</item>
        <item>Urdu</item>
        <item>Gujarati</item>
        <item>Kannada</item>
        <item>Malayalam</item>
        <item>Odia</item>
        <item>Punjabi</item>
        <item>Assamese</item>
        <item>Maithili</item>
    </string-array>
    <string name="title_activity_demo">demo</string>
    <string name="AccountName">Welcome,give us a few details of Your Account</string>
    <string name="Manditory">* Mendatory Fields</string>
    <string name="First">First Name *  :</string>
    <string name="Last">Last Name *  :</string>
    <string name="Email">Email *  :</string>
    <string name="Password">Password *  :</string>
    <string name="BasicInfo">give us some few Basic Information</string>
    <string name="Mobile">Mobile No. *  :</string>
    <string name="MobileInitial">+91</string>
    <string name="DOB">Date Of Birth *  :</string>
    <string-array name="Height">

        <item>Below 4ft</item>
        <item>4ft 06in</item>
        <item>4ft 07in</item>
        <item>4ft 08in</item>
        <item>4ft 09in</item>
        <item>4ft 10in</item>
        <item>4ft 11in</item>
        <item>5ft</item>
        <item>5ft 01in</item>
        <item>5ft 02in</item>
        <item>5ft 03in</item>
        <item>5ft 04in</item>
        <item>5ft 05in</item>
        <item>5ft 06in</item>
        <item>5ft 07in</item>
        <item>5ft 08in</item>
        <item>5ft 09in</item>
        <item>5ft 10in</item>
        <item>5ft 11in</item>
        <item>6ft</item>
        <item>6ft 01in</item>
        <item>6ft 02in</item>
        <item>6ft 03in</item>
        <item>6ft 04in</item>
        <item>6ft 05in</item>
        <item>6ft 06in</item>
        <item>6ft 07in</item>
        <item>6ft 08in</item>
        <item>6ft 09in</item>
        <item>6ft 10in</item>
        <item>6ft 11in</item>
        <item>7ft</item>
        <item>above 7ft</item>

    </string-array>
    <string-array name="Weight">
        <item>Select Your Weight</item>
        <item>40 Kg</item>
        <item>41 Kg</item>
        <item>42 Kg</item>
        <item>43 Kg</item>
        <item>44 Kg</item>
        <item>45 Kg</item>
        <item>46 Kg</item>
        <item>47 Kg</item>
        <item>48 Kg</item>
        <item>49 Kg</item>
        <item>50 Kg</item>
        <item>51 Kg</item>
        <item>52 Kg</item>
        <item>53 Kg</item>
        <item>54 Kg</item>
        <item>55 Kg</item>
        <item>56 Kg</item>
        <item>57 Kg</item>
        <item>58 Kg</item>
        <item>59 Kg</item>
        <item>60 Kg</item>
        <item>61 Kg</item>
        <item>62 Kg</item>
        <item>63 Kg</item>
        <item>64 Kg</item>
        <item>65 Kg</item>
        <item>66 Kg</item>
        <item>67 Kg</item>
        <item>68 Kg</item>
        <item>69 Kg</item>
        <item>70 Kg</item>
        <item>71 Kg</item>
        <item>72 Kg</item>
        <item>73 Kg</item>
        <item>74 Kg</item>
        <item>75 Kg</item>
        <item>76 Kg</item>
        <item>77 Kg</item>
        <item>78 Kg</item>
        <item>79 Kg</item>
        <item>80 Kg</item>
        <item>81 Kg</item>
        <item>82 Kg</item>
        <item>83 Kg</item>
        <item>84 Kg</item>
        <item>85 Kg</item>
        <item>86 Kg</item>
        <item>87 Kg</item>
        <item>88 Kg</item>
        <item>89 Kg</item>
        <item>90 Kg</item>
        <item>91 Kg</item>
        <item>92 Kg</item>
        <item>93 Kg</item>
        <item>94 Kg</item>
        <item>95 Kg</item>
        <item>96 Kg</item>
        <item>97 Kg</item>
        <item>98 Kg</item>
        <item>99 Kg</item>
        <item>100 Kg</item>
        <item>101 Kg</item>
        <item>102 Kg</item>
        <item>103 Kg</item>
        <item>104 Kg</item>
        <item>105 Kg</item>
        <item>106 Kg</item>
        <item>107 Kg</item>
        <item>108 Kg</item>
        <item>109 Kg</item>
        <item>110 Kg</item>
        <item>111 Kg</item>
        <item>112 Kg</item>
        <item>113 Kg</item>
        <item>114 Kg</item>
        <item>115 Kg</item>
        <item>116 Kg</item>
        <item>117 Kg</item>
        <item>118 Kg</item>
        <item>119 Kg</item>
        <item>200 Kg</item>
    </string-array>
    <string name="Gender">Gender *  :</string>
    <string name="manglik_prompt">Select Your Manglik Status</string>
    <string name="height_prompt">Select Your Height</string>
    <string name="weight_prompt">Select Your Weight</string>
    <string name="gender_prompt">Select Your Gender</string>
    <string name="ReligionInfo">Give us some Social Religion Information</string>
    <string name="Religion">Religion *   :</string>
    <string name="MotherTongue">Mother Tongue *   :</string>
    <string name="Caste">Caste *   :</string>
    <string name="MaritalStatus">Marital Status *   :</string>
    <string-array name="Manglik">
        <item>Select Your Manglik Status</item>
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string name="Education">Education And Occupation Details</string>
    <string name="EducationText">Education *  :</string>
    <string name="Employed">Employed In *  :</string>
    <string name="Occupation">Occupation *  :</string>
    <string-array name="Designation">

        <item>Select Your Designation</item>
        <item>Web Designer</item>
        <item>Web Developer</item>
    </string-array>
    <string-array name="AnnualIncome">

        <item>Select Annual Income</item>
        <item>10,000 - 50,000</item>
        <item>50,000 - 1,00,000</item>
        <item>1,00,000 - 2,00,000</item>
        <item>2,00,000 - 5,00,000</item>
        <item>5,00,000 - 10,00,000</item>
        <item>10,00,000 - 50,00,000</item>
        <item>50,00,000 - 100,00,000</item>
        <item>Above Rs 1,00,00,000</item>
        <item>Does Not Matter</item>

    </string-array>
    <string name="LivingIn">Tel Us about Living In</string>
    <string name="CountryLivingIn">Country Living In *  :</string>
    <string name="State">State *  :</string>
    <string name="City">City *  :</string>
    <string name="PartnerPreferences">Give Us Your Partner Preference</string>
    <string-array name="LookingFor">

        <item>Unmarried</item>
        <item>Widow/Widower</item>
        <item>Divorcee</item>
        <item>Seperated</item>

    </string-array>
    <string name="PartnerAge">Partner Age  :</string>
    <string name="PartnerCountry">Partner Country Living In *  :</string>
    <string name="PartnerReligion">Partner Religion *  :</string>
    <string name="PartnerCaste">Partner Cast *  :</string>
    <string name="PartnerEducation">Partners Education *  :</string>
    <string name="PartnerComplexion">Partners Complexion *  :</string>
    <string name="PartnerMotherTongue">Partner MotherTongue *  :</string>
    <string name="PartnerAnnualIncome">Partner Annual Income *  :</string>
    <string name="HeightTo_prompt">Select Height To</string>
    <string name="PartnerHeight">Partner Height *  :</string>
    <string name="Continue">Continue</string>
    <string-array name="Complexion">
        <item>Select Partner Complexion</item>
        <item>Very Fair</item>
        <item>Fair</item>
        <item>Wheatish</item>
        <item>Wheatish Medium</item>
        <item>Wheatish Brown</item>
        <item>Dark</item>
    </string-array>
    <string-array name="maritalstatus">
        <item>Select Your Marital Status</item>
        <item>Unmarried</item>
        <item>Widow/Widower</item>
        <item>Divorcee</item>
        <item>Separated</item>
    </string-array>
    <string-array name="EmployedInArray">

        <item>Select Employed In</item>
        <item>Private</item>
        <item>Government</item>
        <item>Bussiness</item>
        <item>Defence</item>
        <item>Not Employed In</item>
        <item>Others</item>

    </string-array>
    <string-array name="PartnerIncome">
        <item>Select Annual Income</item>
        <item>10,000 - 50,000</item>
        <item>50,000 - 1,00,000</item>
        <item>1,00,000 - 2,00,000</item>
        <item>2,00,000 - 5,00,000</item>
        <item>5,00,000 - 10,00,000</item>
        <item>10,00,000 - 50,00,000</item>
        <item>50,00,000 - 100,00,000</item>
        <item>Above Rs 1,00,00,000</item>
        <item>Does Not Matter</item>
    </string-array>
    <string-array name="Date">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="agefrom">
        <item>Select age</item>
        <item>16 Years</item>
        <item>17 Years</item>
        <item>18 Years</item>
        <item>19 Years</item>
        <item>20 Years</item>
        <item>21 Years</item>
        <item>22 Years</item>
        <item>23 Years</item>
        <item>24 Years</item>
        <item>25 Years</item>
        <item>26 Years</item>
        <item>27 Years</item>
        <item>28 Years</item>
        <item>29 Years</item>
        <item>30 Years</item>

    </string-array>
</resources>